[package]
name = "hashmap_macro"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Wholesome Ghoul <wholesome.ghoul@gmail.com"]
description = "hashmap macro for creating hashmap from provided key/value pairs"
homepage = "https://github.com/wholesome-ghoul/hashmap_macro"
documentation = "https://docs.rs/hashmap_macro"
repository = "https://github.com/wholesome-ghoul/hashmap_macro"
readme = "README.md"
keywords =["macro", "hashmap"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
